--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -9,4 +9,4 @@
     {% endfor %}
 </ul>
 
-{#<a href="{% url 'polls:detail' question.question_id %}">Vote Again?</a>#}
+<a href="{% url 'polls:detail' question.id %}">Vote Again?</a>
