feat(Django Training): Completed chapter 6
In this 6th chapter, the requirement was to add stylesheets to the project as static files, edit some styles and add background image to the application page.

ICTRAINING-939

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,4 +1,6 @@
 <!-- Incomplete template. To be used only for training purpose. -->
+{% load static %}
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
