--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,7 +1,7 @@
-body {
-    background: white url("images/bg.gif") no-repeat;
-}
+/*body {*/
+/*    background: white url("images/bg.gif") no-repeat;*/
+/*}*/
 
 li a {
-    color: white;
+    color: darkblue;
 }
